# unofficial-discord-client

./: .clang-tidy  .gitignore  CMakeLists.txt  Channel.cpp  Channel.hpp  DiscordAPI.hpp  LICENSE  MainWindow.cpp  MainWindow.hpp  Overwrite.hpp  README.md  User.hpp  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: build-linux.yml  build-macos.yml  build-w10.yml  build.yml  clang-format.yml  cmake.yaml  cmake.yml
DiscordApi/: Constructs.hpp  DiscordAPI.hpp  Requests.hpp
project_files/: unofficial-discord-client.cuda-proj  unofficial-discord-client.kdev4
scripts/: clang-format.sh  clang-tidy.sh
src/: Application.hpp  Authenticator.cpp  Authenticator.hpp  CMakeLists.txt  Guild.cpp  Guild.hpp  GuildsModel.cpp  GuildsModel.hpp  MainWindow.cpp  MainWindow.hpp  Requester.cpp  Requester.hpp  User.cpp  User.hpp  main.cpp
src/DiscordApi/: Constructs.hpp  DiscordAPI.hpp
src/app/: Application.cpp  Application.hpp  main.cpp
src/core/: Attachment.cpp  Attachment.hpp  Channel.cpp  Channel.hpp  Component.cpp  Component.hpp  Embed.cpp  Embed.hpp  Emoji.cpp  Emoji.hpp  Guild.cpp  Guild.hpp  Guild_Member.cpp  Guild_Member.hpp  Message.cpp  Message.hpp  Role.cpp  Role.hpp  Settings.cpp  Settings.hpp  Types.hpp  User.cpp  User.hpp  Voice.cpp  Voice.hpp  component.cpp  component.hpp  role.cpp  role.hpp
src/gateway/: Gateway.cpp  Gateway.hpp  common.hpp
src/gui/: ChannelsModel.cpp  ChannelsModel.hpp  GuildsModel.cpp  GuildsModel.hpp  ImageRender.cpp  ImageRender.hpp  MessagesModel.cpp  MessagesModel.hpp  SettingsModel.cpp  SettingsModel.hpp
src/handlers/: Authenticator.cpp  Authenticator.hpp  Requester.cpp  Requester.hpp
src/qml/: ChannelsBar.qml  Chat.qml  GuildsBar.qml  Login.qml  Menubar.qml  MessagesWidget.qml  PopupMessage.qml  SendMessageWidget.qml  Settings.qml  UserInfoBar.qml  UserListBar.qml  main.qml  qml.qrc  qtquickcontrols2.conf
